Relaunch passes only the user's VM arguments
RestartEdtTool takes the user's VM arguments from eclipse.vmargs minus
the launcher .ini block captured at bundle start (Activator.start calls
captureIniVmArgumentsAtStartup), dropping every earlier copy of that
block, and relaunches with --launcher.appendVmargs so the launcher adds
the current .ini itself. Without eclipse.vmargs, a startup snapshot or a
matching leading block the command carries no -vmargs, and the answer
names why in vmArgumentsNote.

TheRelaunchCommandDoesNotGrowTest runs on the measured 34-line block
with -server: fresh and grown instances, a fixed point, an .ini edited
after start, the three fallbacks and the raw startup read.